--- a/shippable.yml
+++ b/shippable.yml
@@ -2,6 +2,12 @@ language: java
 
 jdk:
    - oraclejdk7
+notifications:
+  email:
+    recipients:
+      - vidya@shippable.com
+    on_success: never
+    on_failure: always
 
 
     
