--- a/shippable.yml
+++ b/shippable.yml
@@ -3,3 +3,8 @@ language: java
 jdk:
    - oraclejdk7
 script: ant coverage
+notifications:
+  email:
+      recipients:
+         - vidyac.raghav@gmail.com
+         - vidyatest@hotmail.com
